# inft2503

./: README.md
.github/workflows/: ci_01.yml  ci_02.yml  ci_03.yml  ci_04.yml  ci_05.yml  ci_06.yml  ci_07.yml  ci_08.yml  ci_09.yml  ci_10.yml  ci_f22.yml
01/: CMakeLists.txt  README.md  main.cpp  task_a.cpp  task_b.cpp
02/: CMakeLists.txt  README.md  main.cpp  task_1.cpp  task_2.md  task_3.md  task_4.cpp  task_5.cpp  task_6.cpp
03/: CMakeLists.txt  README.md  main.cpp  task_2.cpp  task_3.cpp  task_4.cpp
03/circle/: Circle.cpp  Circle.h
03/commodity/: Commodity.cpp  Commodity.h
04/: .gitignore  CMakeLists.txt  README.md  name_task.cpp  vector_task.cpp
05/: CMakeLists.txt  README.md  main.cpp
06/: .gitignore  CMakeLists.txt  README.md  chess.cpp  echoserver.cpp
07/: .gitignore  CMakeLists.txt  Fraction.cpp  Fraction.h  README.md  Set.cpp  Set.h  main.cpp  task_1.cpp  task_2.cpp
08/: CMakeLists.txt  README.md  main.cpp  task_1.cpp  task_2.cpp
09/: CMakeLists.txt  README.md  main.cpp  task_a.cpp  task_b.cpp  task_c.cpp
10/: README.md  main.cpp
exams/f22/: CMakeLists.txt  README.md
exams/f22/tasks/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
